finished cors config